# arduino-simple-tts

./: .gitignore  CMakeLists.txt  Doxyfile  License.txt  README.md  library.properties
docs/html/: _audio_dictionary_8h_source.html  _audio_dictionary_s_d_8h_source.html  _audio_dictionary_u_r_l_8h_source.html  _number_to_text_8h_source.html  _number_unit_to_text_8h_source.html  _simple_t_t_s_8h_source.html  _simple_t_t_s_base_8h_source.html  _text_to_speech_8h_source.html  _text_to_speech_queue_8h_source.html  _time_to_text_8h_source.html  annotated.html  classes.html  classsimple__tts_1_1_audio_dictionary-members.html  classsimple__tts_1_1_audio_dictionary.html  classsimple__tts_1_1_audio_dictionary_base-members.html  classsimple__tts_1_1_audio_dictionary_base.html  classsimple__tts_1_1_audio_dictionary_s_d-members.html  classsimple__tts_1_1_audio_dictionary_s_d.html  classsimple__tts_1_1_audio_dictionary_u_r_l-members.html  classsimple__tts_1_1_audio_dictionary_u_r_l.html  classsimple__tts_1_1_audio_stream_file_wrapper-members.html  classsimple__tts_1_1_audio_stream_file_wrapper.html  classsimple__tts_1_1_number-members.html  classsimple__tts_1_1_number.html  classsimple__tts_1_1_number_to_text-members.html  classsimple__tts_1_1_number_to_text.html  classsimple__tts_1_1_number_unit_to_text-members.html  classsimple__tts_1_1_number_unit_to_text.html  classsimple__tts_1_1_simple_t_t_s_base-members.html  classsimple__tts_1_1_simple_t_t_s_base.html  classsimple__tts_1_1_text_to_speech-members.html  classsimple__tts_1_1_text_to_speech.html  classsimple__tts_1_1_text_to_speech_queue-members.html  classsimple__tts_1_1_text_to_speech_queue.html  classsimple__tts_1_1_time_to_text-members.html  classsimple__tts_1_1_time_to_text.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  (+16 more)
docs/latex/: _audio_dictionary_8h_source.tex  _audio_dictionary_s_d_8h_source.tex  _audio_dictionary_u_r_l_8h_source.tex  _number_to_text_8h_source.tex  _number_unit_to_text_8h_source.tex  _simple_t_t_s_8h_source.tex  _simple_t_t_s_base_8h_source.tex  _text_to_speech_8h_source.tex  _text_to_speech_queue_8h_source.tex  _time_to_text_8h_source.tex  annotated.tex  classsimple__tts_1_1_audio_dictionary.eps  classsimple__tts_1_1_audio_dictionary.tex  classsimple__tts_1_1_audio_dictionary_base.eps  classsimple__tts_1_1_audio_dictionary_base.tex  classsimple__tts_1_1_audio_dictionary_s_d.eps  classsimple__tts_1_1_audio_dictionary_s_d.tex  classsimple__tts_1_1_audio_dictionary_u_r_l.eps  classsimple__tts_1_1_audio_dictionary_u_r_l.tex  classsimple__tts_1_1_audio_stream_file_wrapper.eps  classsimple__tts_1_1_audio_stream_file_wrapper.tex  classsimple__tts_1_1_number.tex  classsimple__tts_1_1_number_to_text.eps  classsimple__tts_1_1_number_to_text.tex  classsimple__tts_1_1_number_unit_to_text.eps  classsimple__tts_1_1_number_unit_to_text.tex  classsimple__tts_1_1_simple_t_t_s_base.eps  classsimple__tts_1_1_simple_t_t_s_base.tex  classsimple__tts_1_1_text_to_speech.tex  classsimple__tts_1_1_text_to_speech_queue.tex  classsimple__tts_1_1_time_to_text.eps  classsimple__tts_1_1_time_to_text.tex  files.tex  hierarchy.tex  index.tex  refman.tex  structsimple__tts_1_1_audio_dictionary_entry.eps  structsimple__tts_1_1_audio_dictionary_entry.tex  structsimple__tts_1_1_audio_dictionary_entry_ext.eps  structsimple__tts_1_1_audio_dictionary_entry_ext.tex  (+4 more)
examples/: CMakeLists.txt  main.cpp
examples/audio-analog/: audio-analog.ino
examples/audio-csv/: audio-csv.ino
examples/audio-i2s/: audio-i2s.ino
examples/audio-i2s-nosilence/: CMakeLists.txt  Desktop.h  audio-i2s-nosilence.ino  audio-i2s-noslence.ino
examples/audio-i2s-queue/: audio-i2s-queue.ino
examples/audio-pwm/: audio-pwm.ino
examples/data-csv/: data-csv.ino
examples/example-own-sound/: example-own-sound.ino  speechArray.h  speechSamples.h
examples/example-own-sound/headers/: and.h  angle.h  axis.h  calibrated.h  calibrating.h  calibration.h  degrees.h  disabled.h  eighty.h  eleven.h  enabled.h  exit.h  fifteen.h  fifty.h  five.h  forty.h  four.h  fourteen.h  hundred.h  memory.h  menu.h  minus.h  nine.h  one.h  plus.h  roll.h  save.h  set.h  seven.h  sixteen.h  sixty.h  tare.h  thirteen.h  three.h  twelve.h  twenty.h  two.h  volume.h  x.h  y.h  (+1 more)
examples/number-to-speech/: CMakeLists.txt  number-to-speech.ino
examples/number-to-text/: CMakeLists.txt  number-to-text.ino
examples/sd-initial-load/: CMakeLists.txt  sd-initial-load.ino
examples/sd-initial-load-long/: CMakeLists.txt  sd-initial-load-long.ino
examples/talking-clock/: talking-clock.ino
examples/talking-time/: TimeInfo.h  talking-time.ino
examples/time-to-speech/: ._CMakeLists.txt  CMakeLists.txt  Desktop.h  time-to-speech.ino
examples/time-to-speech-audiokit/: time-to-speech-audiokit.ino
examples/time-to-speech-sd/: time-to-speech-sd.ino
examples/time-to-speech-url/: time-to-speech-url.ino
examples/time-to-text/: CMakeLists.txt  time-to-text.ino
examples/tts/: CMakeLists.txt  speechArray.h  tts.ino
examples/tts-udp-server/: tts-udp-server.h
examples/tts/headers/: and.h  angle.h  axis.h  billion.h  calibrated.h  calibrating.h  calibration.h  complete.h  degrees.h  disabled.h  eight.h  eighteen.h  eighty.h  eleven.h  enabled.h  exit.h  fifteen.h  fifty.h  five.h  forty.h  four.h  fourteen.h  hundred.h  memory.h  menu.h  million.h  minus.h  nine.h  nineteen.h  ninety.h  one.h  pitch.h  plus.h  roll.h  save.h  set.h  seven.h  seventeen.h  seventy.h  silence.h  (+20 more)
examples/unit-to-speech/: CMakeLists.txt  unit-to-speech.ino
examples/unit-to-text/: CMakeLists.txt  unit-to-text.ino
src/: AudioDictionary.h  AudioDictionarySD.h  AudioDictionaryURL.h  NumberToText.h  NumberUnitToText.h  SilenceRemovalStream.h  SimpleTTS.h  SimpleTTSBase.h  TextToSpeech.h  TextToSpeechQueue.h  TimeToText.h
src/en/: all.h  am.h  and.h  billion.h  celcius.h  cent.h  centi.h  cents.h  degrees.h  dollar.h  dollars.h  dot.h  eight.h  eighteen.h  eighty.h  eleven.h  fahrenheit.h  feet.h  fifteen.h  five.h  (+54 more)
tools/: README.ipynb  audio.csv  make-h.py  make-mp3.py
(+36 files in other folders)
